# kernel-builder

./: .gitignore  Dockerfile  LICENSE  README.md  build-variants.json  flake.nix  overlay.nix  versions.nix
.github/workflows/: build_kernel.yaml  build_kernel_macos.yaml  build_kernel_rocm.yaml  build_kernel_windows.yaml  build_kernel_xpu.yaml  check_variants.yaml  docker-build-push.yaml  kernel_abi_python_release.yaml  nix_fmt.yaml  package.yaml  rust.yaml  test_extra_commands.yaml  test_python.yaml
build2cmake/: Cargo.toml  flake.nix
build2cmake/src/: config.rs  cuda_supported_archs.json  fileset.rs  main.rs  metadata.rs  python_dependencies.json  torch.rs  torch_universal.rs  version.rs
build2cmake/src/cmake/: utils.cmake
build2cmake/src/config/: common.rs  compat.rs  deps.rs  mod.rs  v1.rs  v2.rs  v3.rs
build2cmake/src/templates/: kernel.cmake  preamble.cmake  pyproject.toml  pyproject_universal.toml  setup.py  torch-binding.cmake  torch-extension.cmake  utils.cmake  windows.cmake
build2cmake/src/templates/cpu/: kernel.cmake  preamble.cmake  setup.py  torch-binding.cmake  torch-extension.cmake
build2cmake/src/templates/cuda/: hipify.py  kernel.cmake  preamble.cmake  setup.py  torch-extension.cmake
build2cmake/src/templates/metal/: compile-metal.cmake  kernel.cmake  metallib_to_header.py  preamble.cmake  setup.py  torch-binding.cmake  torch-extension.cmake  utils.cmake
build2cmake/src/templates/noarch/: _ops.py
build2cmake/src/templates/universal/: pyproject.toml
build2cmake/src/templates/xpu/: dep-cutlass-sycl.cmake  kernel.cmake  preamble.cmake  setup.py  torch-binding.cmake  torch-extension.cmake
build2cmake/src/torch/: common.rs  cpu.rs  cuda.rs  metal.rs  mod.rs  noarch.rs  ops_identifier.rs  universal.rs  xpu.rs
dockerfiles/: Dockerfile  README.md
docs/: 2024-12-03.md  build-variants.md  docker.md  local-dev.md  metal.md  nix.md  security.md  toolchain.md  why-nix.md  writing-kernels.md
examples/activation/: README.md  build.toml  flake.nix
examples/activation/ext-torch/: __init__.py  torch_binding.cpp  torch_binding.h
examples/activation/torch-ext/: torch_binding.cpp
examples/cutlass-gemm/: build.toml  flake.nix  gemm.cu  gemm_sycl.cpp
examples/cutlass-gemm/tests/: test_gemm.py
examples/cutlass-gemm/torch-ext/: torch_binding.cpp  torch_binding.h
examples/relu/: build.toml  flake.nix
examples/relu-backprop-compile/: build.toml
examples/relu-backprop-compile/relu_cuda/: relu.cu
examples/relu-backprop-compile/tests/: test_relu.py
examples/relu-backprop-compile/torch-ext/: torch_binding.cpp  torch_binding.h
examples/relu-compiler-flags/: build.toml  flake.nix
examples/relu-compiler-flags/relu_cuda/: relu.cu
examples/relu-metal-cpp/: build.toml  flake.nix
examples/relu-specific-torch/: build.toml  flake.nix
examples/relu-torch-bounds/: build.toml
examples/silu-and-mul/: build.toml  flake.nix
examples/silu-and-mul-universal/: build.toml  flake.nix
kernel-abi-check/: Cargo.toml  flake.nix
kernel-abi-check/bindings/python/: Cargo.toml  MANIFEST.in  kernel_abi_check.pyi  pyproject.toml
kernel-abi-check/bindings/python/src/: lib.rs
kernel-abi-check/bindings/python/tests/: test_kernel_abi_check.py
kernel-abi-check/kernel-abi-check/: Cargo.toml
kernel-abi-check/kernel-abi-check/src/manylinux/: mod.rs
kernel-abi-check/kernel-abi-check/src/python_abi/: mod.rs
kernel-abi-check/src/: lib.rs  macos.rs  main.rs  version.rs
kernel-abi-check/src/manylinux/: manylinux-policy.json  mod.rs
kernel-abi-check/src/python_abi/: mod.rs
kernel-compliance-check/: Cargo.toml
kernel-compliance-check/src/: build_variants.json  formatter.rs  lib.rs  main.rs  models.rs
lib/: build-sets.nix  build-variants.nix  build-version.nix  build.nix  buildsets.nix  checks.nix  deps.nix  gen-flake-outputs.nix  kernel-unwrapped.nix  source-set.nix  torch-version-utils.nix  version-utils.nix
lib/join-paths/: default.nix
lib/kernel/: CMakeLists.txt  default.nix
lib/torch-extension/: CMakeLists.txt  _ops.py.in  arch.nix  compat.py  default.nix  no-arch.nix
lib/torch-extension-noarch/: default.nix
pkgs/aotriton/: default.nix  generic.nix  v0.10b-explicit-cast-for-narrowing.diff  v0.10b-no-ld-script.diff  v0.11.1b-no-ld-script.diff  v0.11b-no-ld-script.diff
pkgs/build2cmake/: default.nix
pkgs/cmake-nvcc-threads-hook/: cmake-nvcc-threads-hook.sh  default.nix
pkgs/cmake-sycl-hook/: cmake-sycl-hook.sh  default.nix
pkgs/cutlass/: builder.nix  default.nix
pkgs/get-kernel-check/: default.nix  get-kernel-check-hook.sh
pkgs/inteloneapi-toolkit/: default.nix
pkgs/kernel-abi-check/: default.nix  kernel-abi-check-hook.sh
pkgs/kernel-layout-check/: default.nix  kernel-layout-check-hook.sh
pkgs/magma/: generic.nix  rocm-7-pr65.diff
pkgs/metal-cpp/: default.nix
pkgs/nvtx/: default.nix
pkgs/remove-bytecode-hook/: default.nix  remove-bytecode-hook.sh
pkgs/rewrite-nix-paths-macho/: default.nix  rewrite-nix-paths-macho.py
pkgs/rocm-packages/: cc-wrapper.sh  clang.nix  clr.nix  default.nix  generic.nix  joins.nix  ld-wrapper.sh  llvm.nix  overrides.nix  rhel2nix.py  rocm-6.3.4-metadata.json  rocm-6.4.2-metadata.json  rocm-7.0.1-metadata.json  rocm-7.0.2-metadata.json  rocm-7.1.1-metadata.json
pkgs/stdenv-glibc-2_27/: default.nix
pkgs/toml2cmake/: default.nix
pkgs/xpu-packages/: components.nix  cutlass-sycl.nix  default.nix  generic.nix  hooks.nix  intel-deep-learning-2025.1.3.json  intel-deep-learning-2025.2.1.json  intel-deep-learning-2025.3.1.json  mark-for-xpu-root-hook.sh  ocloc.nix  oneapi-torch-dev.nix  onednn-xpu.nix  overrides.nix  rhel2nix.py  setup-xpu-hook.sh
scripts/: gen_variants_markdown.py  init-kernel.py
scripts/windows/: builder.ps1
tests/: Dockerfile.test-kernel  run-tests.sh
tests/run-kernels/: pyproject.toml
toml2cmake/: Cargo.toml  flake.nix
toml2cmake/src/: config.rs  fileset.rs  main.rs  torch.rs
toml2cmake/src/cmake/: utils.cmake
toml2cmake/src/templates/: _ops.py  dep-cutlass.cmake  kernel.cmake  preamble.cmake  registration.h  setup.py  torch-extension.cmake
(+52 files in other folders)
