[package]
name = "kernel-compliance-check"
version = "0.1.0"
edition = "2021"
description = "Command-line utility for validating kernel compliance standards"
license = "Apache-2.0"
repository = "https://github.com/huggingface/kernel-builder"
documentation = "https://docs.rs/kernel-compliance-check"
homepage = "https://github.com/huggingface/kernel-builder"

[features]
default = []
enable_rocm = []

[dependencies]
eyre = "0.6.12"
clap = { version = "4.5.35", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
futures = "0.3.31"
hf-hub = { version = "0.4.2", features = ["tokio"] }
kernel-abi-check = "0.4.0"
object = { version = "0.36.7", default-features = false, features = ["read"] }
once_cell = "1.18.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.40"
tokio = { version = "1.44.2", features = ["full"] }

[build-dependencies]
ureq = "2.7.1"